# saulo.engineer

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .gitsubtrees  .lintstagedrc  .prototools  .stylelintrc.json  CNAME  LICENSE  TODO.md  astro.config.mjs  bun.lockb  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  todo.md  tsconfig.eslint.json  tsconfig.json
.astro/: icon.d.ts  types.d.ts
.github/: funding.yml
.github/workflows/: deploy.yml
.husky/: pre-commit  prevent-mixed-subtree-commits.sh
assitant/: .gitignore  package.json  pnpm-lock.yaml  text-generation-model-exploration.ipynb  tsconfig.json  wrangler.toml
assitant/src/: index.ts  workers.d.ts
assitant/supabase/: config.toml
design/: logo.ai  logotype.psd  saulo.engineer logotype.ai
examples/marko/: marko.attribute-groups.json
examples/marko-tag/: marko-tag.attr-only.json
notes/: recommendations-section.html
schemas/: marko-tag.json
schemas/models/: attribute.object.json  attribute.string.json  tag.base.json  tag.json
schemas/property-groups/: file-mappings.json  parse-options.json
scripts/: cmdtpl.ts  dev.ts  validate-schemas.sh
src/: env.d.ts  files.d.ts  marko-tag.yaml  marko.yaml  openapi.yaml
src/assistant/: index.ts
src/components/: AIChat.astro  CallToAction.astro  CardCloud.astro  CardRecommendations.astro  Experience.astro  Feature.astro  FlyingMenu.astro  Footer.astro  FormAi.astro  Header.astro  Hero.astro  IconLink.astro  Navigation.astro  RecentProjects.astro  RecommendationCard.astro  RoleHighlight.astro  SiteMeta.astro  (+5 more)
(+174 files in other folders)
